Fixes myriad problems and bugs with installation and file access.
This commit fixes the following problems:

• If the user's server uses 'content' in its absolute directory path
(ex. GoDaddy), then Foundation would get confused and not find images.
This is now fixed.

• Parsel wouldn't let the user chain for individual images in the
current project.

• The installation was failing due to a duplicate ID in an
auto-incremented table.

• Small visual bug on install.htm

--- a/install/install.htm
+++ b/install/install.htm
@@ -48,8 +48,7 @@
 						</fieldset>
 						
 						<fieldset id="submit">
-							<div class="build">Build</div>
-							<input class="submit" name="submit" type="submit" value="Login">
+							<input class="submit" name="submit" type="submit" value="Build">
 						</fieldset>
 					</form>
 				</div>
