This commit updates Foundation from build 105 to build 110.

--- a/install/install.htm
+++ b/install/install.htm
@@ -43,7 +43,7 @@
 							<p>Also, we need to know some information about the server you're running Foundation on.</p>
 							<input class="finput db_server required" name="db_server" placeholder="Database Server (usually localhost)" type="text"><br>
 							<input class="finput db_username required" name="db_username" placeholder="Database Username" type="text"><br>
-							<input class="finput db_password required" name="db_password" placeholder="Database Password" type="password"><br>
+							<input class="finput db_password" name="db_password" placeholder="Database Password" type="password"><br>
 							<input class="finput db_name required" name="db_name" placeholder="Database Name" type="text"><br>
 						</fieldset>
 
